--- a/index.html
+++ b/index.html
@@ -586,6 +586,28 @@ Credits to Jan van Gemert for allowing us to use his original design.
                 </div>
             </div>
         </div>
+
+        <div class="col-md-3">
+            <div style="position: relative; width: 100%; padding-top: 70%; overflow: hidden;">
+                <img
+                        alt="poster_teaser"
+                        style="position: absolute; top: 0; width:100%;"
+                        src="/images/DAVID_HAPPEL_poster.jpg"
+                >
+            </div>
+            <div class="middle">
+                <div class="text">
+                    <h4>Extracting location context from transcripts: a comparison of ELMo and TF-IDF</h4>
+                    <p>By David Happel</p>
+                    <h5>
+                        <a href="/posters/DAVID_HAPPEL_poster.pdf" target="_blank">
+                            <span class="label label-success">Poster</span>
+                        </a>
+                        <a href="https://repository.tudelft.nl/islandora/object/uuid%3Aad4e3624-4f39-4a64-a678-c232e3f8d7da" target="_blank"><span class="label label-primary">Paper</span></a>
+                    </h5>
+                </div>
+            </div>
+        </div>
     </div><div class="row content"><h3>New generation iterative prisoner's dilemma</h3></div><div class="row content">
         <div class="col-md-3">
             <div style="position: relative; width: 100%; padding-top: 70%; overflow: hidden;">
