--- a/index.html
+++ b/index.html
@@ -608,6 +608,28 @@ Credits to Jan van Gemert for allowing us to use his original design.
                 </div>
             </div>
         </div>
+
+        <div class="col-md-3">
+            <div style="position: relative; width: 100%; padding-top: 70%; overflow: hidden;">
+                <img
+                        alt="poster_teaser"
+                        style="position: absolute; top: 0; width:100%;"
+                        src="/images/Thijs_Raymakers_poster.jpg"
+                >
+            </div>
+            <div class="middle">
+                <div class="text">
+                    <h4>Gender bias in different languages</h4>
+                    <p>By Thijs Raymakers</p>
+                    <h5>
+                        <a href="/posters/Thijs_Raymakers_poster.pdf" target="_blank">
+                            <span class="label label-success">Poster</span>
+                        </a>
+                        <a href="http://resolver.tudelft.nl/uuid:ea118174-0a65-438a-a417-8461e246499a" target="_blank"><span class="label label-primary">Paper</span></a>
+                    </h5>
+                </div>
+            </div>
+        </div>
     </div><div class="row content"><h3>New generation iterative prisoner's dilemma</h3></div><div class="row content">
         <div class="col-md-3">
             <div style="position: relative; width: 100%; padding-top: 70%; overflow: hidden;">
