--- a/index.html
+++ b/index.html
@@ -190,6 +190,27 @@ Credits to Jan van Gemert for allowing us to use his original design.
                 </div>
             </div>
         </div>
+        <div class="col-md-3">
+            <div style="position: relative; width: 100%; padding-top: 70%; overflow: hidden;">
+                <img
+                        alt="poster_teaser"
+                        style="position: absolute; top: 0; width:100%;"
+                        src="/images/Noah_Jadoenathmisier_poster.jpg"
+                >
+            </div>
+            <div class="middle">
+                <div class="text">
+                    <h4>Extending CBS to efficiently solve MAPFW</h4>
+                    <p>By Noah Jadoenathmisier</p>
+                    <h5>
+                        <a href="/posters/Noah_Jadoenathmisier_poster.pdf" target="_blank">
+                            <span class="label label-success">Poster</span>
+                        </a>
+                        <a href="http://resolver.tudelft.nl/uuid:7b6ed42f-ded8-4256-821b-735cbfe1ea62" target="_blank"><span class="label label-primary">Paper</span></a>
+                    </h5>
+                </div>
+            </div>
+        </div>
     </div><div class="row content"><h3>Can deep learning recognize lego pieces?</h3></div><div class="row content">
         <div class="col-md-3">
             <div style="position: relative; width: 100%; padding-top: 70%; overflow: hidden;">
