--- a/index.html
+++ b/index.html
@@ -1025,6 +1025,28 @@ Credits to Jan van Gemert for allowing us to use his original design.
                 </div>
             </div>
         </div>
+
+        <div class="col-md-3">
+            <div style="position: relative; width: 100%; padding-top: 70%; overflow: hidden;">
+                <img
+                        alt="poster_teaser"
+                        style="position: absolute; top: 0; width:100%;"
+                        src="/images/JEROEN_KAPPE.jpg"
+                >
+            </div>
+            <div class="middle">
+                <div class="text">
+                    <h4>Multi-Objective Hill Climbing for Automated RESTful API Test Case Generation</h4>
+                    <p>By Jeroen Kappé</p>
+                    <h5>
+                        <a href="/posters/JEROEN_KAPPE_poster.pdf" target="_blank">
+                            <span class="label label-success">Poster</span>
+                        </a>
+                        <a href="https://repository.tudelft.nl/islandora/object/uuid:f46bbb17-584a-404e-a156-b1ea6050e3c3?collection=education" target="_blank"><span class="label label-primary">Paper</span></a>
+                    </h5>
+                </div>
+            </div>
+        </div>
     </div>
 
 
